# goit-pythonweb-hw-12

./: .dockerignore  docker-compose.yaml  dockerfile  main.py  pyproject.toml
docs/source/: conf.py  index.rst
src/auth/: auth.py
src/cache_func/: user_cache.py
src/databases/: connect.py  models.py
src/repository/: crud.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: email.py  email_token.py  update_avatar.py
src/templates/: reset_form.html  reset_password.html  templates.html
tests/: conftest.py  test_repository_admin.py  test_repository_authenticate.py  test_repository_crud.py  test_repository_users.py  test_routes_auth.py  test_routes_contacts.py  test_routes_users.py  test_token.py
